...
        )

        Button(
            onClick = onPickDateClick,
            modifier = Modifier
                .padding(top = 8.dp)
                .testTag("pickDateButton")
        ) {
            Text(stringResource(R.string.pick_date))
        }
    }
}

...
